<resources>
    <string name="app_name">spr</string>
    <string name="main_title">Zgłoś brak mundurka</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="clas">Klasa</string>
    <string name="save">Zapisz uwagę</string>
    <string name="toast">Wypełnij wszystkie pola!</string>
    <string name="nd_title">Zapisano uwagę</string>
    <string name="new_btn">Dodaj nowa uwagę</string>
    <string name="makeshift_wait">Zamiast Dialogu (usuneli)</string>
</resources>